# 2D_GameEngine

./: CMakeLists.txt  LICENSE  README.md  assetsBeforeMigration.json  setup_windows.bat
src/: Engine.cpp  Engine.h  Grid.cpp  Grid.h  main.cpp
src/Animation/: Animation.h  AnimationEditor.cpp  AnimationEditor.h  Animator.cpp  Animator.h
src/AssetManagement/: AssetDefinition.cpp  AssetDefinition.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h
src/Entities/: EnemyEntity.cpp  EnemyEntity.h  EnemyManager.cpp  EnemyManager.h  Entity.cpp  Entity.h  PlayerEntity.cpp  PlayerEntity.h  PlayerManager.cpp  PlayerManager.h  StaticEntity.cpp  StaticEntity.h  TileMap.cpp  TileMap.h
src/Managers/: AssetManager.cpp  AssetManager.h  EnemyManager.cpp  EnemyManager.h  LocalizationManager.cpp  LocalizationManager.h  LocalizitionManager.cpp  PlayerManager.cpp  PlayerManager.h  SceneManager.cpp  SceneManager.h
src/Project/: SaveLoad.cpp  SaveLoad.h
src/Scene/: Scene.cpp  Scene.h
src/UI/: UI.cpp  UI.h
